--- a/tasas/templates/control.html
+++ b/tasas/templates/control.html
@@ -12,9 +12,10 @@
 
     {% comment %} {% include "tasas/cooviahorro.html" %} {% endcomment %}
 
-    {% include "tasas/cdats.html" %}
+    {% comment %} {% include "tasas/cdats.html" %} {% endcomment %}
 
-    {% include "tasas/cdatstasas.html" %}
+    {% comment %} {% include "tasas/cdatstasas.html" %} {% endcomment %}
 
+    {% include "tasas/ahorrosVista.html" %}
 
 {% endblock content %}
