save changes, ahorrovista and controls conditions of asesors

--- a/comisiones/templates/comisions/ahorroVista.html
+++ b/comisiones/templates/comisions/ahorroVista.html
@@ -16,7 +16,7 @@
         {% endfor %}
     </table>
     <p>Saldo Promedio: $ <span id="values">{{ahorrosVista.promedio}}</span></p>
-    <p>Total pago: $ <span id="values"></span></p>
+    <p>Total pago: $ <span id="values">{{ahorrosVista.comision}}</span></p>
 </div>
 
 <script>
