--- a/tasas/templates/tasas/ahorrosVista.html
+++ b/tasas/templates/tasas/ahorrosVista.html
@@ -6,9 +6,9 @@
     </tr>
     {% for ahorro in ahorros %}
         <tr>
-            <th>{{ahorros.valueMin}}</th>
-            <th>{{ahorros.valueMax}}</th>
-            <th>{{ahorros.porcentaje}}</th>
+            <th>{{ahorro.valueMin}}</th>
+            <th>{{ahorro.valueMax}}</th>
+            <th>{{ahorro.porcentaje}}</th>
         </tr>
     {% endfor %}
 </table>
