--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -9,13 +9,13 @@
     <div class="tables">
         <h2>Comisiones {{asesor}}</h2>
     
-        {% comment %} {% include "comisions/afiliaciones.html" %} {% endcomment %}
+        {% include "comisions/afiliaciones.html" %}
         
-        {% comment %} {% include "comisions/colocaciones.html" %} {% endcomment %}
+        {% include "comisions/colocaciones.html" %}
         
-        {% comment %} {% include "comisions/cooviahorros.html" %} {% endcomment %}
+        {% include "comisions/cooviahorros.html" %}
         
-        {% comment %} {% include "comisions/cdats.html" %} {% endcomment %}
+        {% include "comisions/cdats.html" %}
 
         {% include "comisions/ahorroVista.html" %}
     </div>
