--- a/tasas/templates/tasas/crecimientoBase.html
+++ b/tasas/templates/tasas/crecimientoBase.html
@@ -1,18 +1,24 @@
-<table>
-    <tr>
-        <th>Crecimiento</th>
-        <th>Valor</th>
-    </tr>
-    {% for crecimiento in crecimientoBase %}
-        <tr>
-            <th>{{crecimiento.porcentaje}}</th>
-            <th>{{crecimiento.value}}</th>
-        </tr>
-    {% endfor %}
-</table> 
+{% extends "control.html" %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ formCrecimientoBase.as_p }}
-    <button type="submit">Guardar</button>
-</form>
+{% load static %}
+
+{% block tasas %}
+    <table>
+        <tr>
+            <th>Crecimiento</th>
+            <th>Valor</th>
+        </tr>
+        {% for crecimiento in crecimientoBase %}
+            <tr>
+                <th>{{crecimiento.porcentaje}}</th>
+                <th>{{crecimiento.value}}</th>
+            </tr>
+        {% endfor %}
+    </table> 
+
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Guardar</button>
+    </form>
+{% endblock tasas %}
