--- a/comisiones/templates/comisions/crecimientoCDAT.html
+++ b/comisiones/templates/comisions/crecimientoCDAT.html
@@ -16,7 +16,7 @@
     {% for cdat in checkMeta.cdats %}
         <tr>
             <td>{{cdat.K_IDTERC}}</td>
-            <td>{{cdat.NOMBRE_TERCERO}}</td>
+            <td>{{cdat.PROMOTOR}}</td>
             <td>{{cdat.Q_PLADIA}}</td>
             <td id="values">{{cdat.V_TITULO}}</td>
             <td>{{cdat.T_EFECTIVA}}</td>
@@ -31,3 +31,14 @@
 
 </div>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var montos = document.querySelectorAll('#values');
+        montos.forEach(function(monto) {
+            if (monto.textContent!== '') {
+                var num = parseFloat(monto.textContent.replace(/,/g, ''));
+                monto.textContent = num.toLocaleString();
+            }
+        });
+    });
+</script>
