Add crecimiento Cdats

--- a/comisiones/templates/comisions/crecimientoCDAT.html
+++ b/comisiones/templates/comisions/crecimientoCDAT.html
@@ -26,7 +26,8 @@
     {% endfor %}
     </table>
     <p>Tasa Promedio: {{checkMeta.tasaPromedio}}
-    <p>Monto Total: $ <span id="values">{{checkMeta.montoTotal}}</span>
+    <p>Plazo Promedio: {{checkMeta.plazoPromedio}}
+    <p>Crecimiento: $ <span id="values">{{checkMeta.montoTotal}}</span>
     <p>Valor total de Comision: $ <span id="values">{{checkMeta.comision}}</span>
 
 </div>
