--- a/tasas/templates/control.html
+++ b/tasas/templates/control.html
@@ -15,6 +15,7 @@
         <li><a href="{% url "ahorro" %}">Ahorro Vista</a></li>
         <li><a href="{% url "crecimientoBase" %}">Crecimiento Base Social</a></li>
         <li><a href="{% url "crecimientoCdat" %}">Crecimiento CDAT</a></li>
+        <li><a href="{% url "crecimientoCooviahorro" %}">Crecimiento Cooviahorro</a></li>
     </ul>
 
     {% block tasas %}
