--- a/tasas/templates/tasas/afiliaciones.html
+++ b/tasas/templates/tasas/afiliaciones.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block tasas %}
-
+    <h2>Tasas y comisiones Afiliaciones</h2>
     <table>
         <tr>
             <th>Afiliaciones</th>
