--- a/tasas/templates/tasas/ahorrosVista.html
+++ b/tasas/templates/tasas/ahorrosVista.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block tasas %}
+    <h2>Tasas y comisiones de Ahorros Vista</h2>
     <table>
         <tr>
             <th>Valor Minimo</th>
