--- a/tasas/templates/tasas/cooviahorro.html
+++ b/tasas/templates/tasas/cooviahorro.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block tasas %}
+    <h2>Tasas y comisiones de Cooviahorros</h2>
     <table>
         <tr>
             <th>Cooviahorro</th>
