--- a/tasas/templates/tasas/crecimientoCdat.html
+++ b/tasas/templates/tasas/crecimientoCdat.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block tasas %}
-
+    <h2>Tasas y comisiones de Crecimiento de CDAT</h2>
     <table>
         <tr>
             <th>Medida</th>
