--- a/comisiones/templates/comisions/crecimientoCDAT.html
+++ b/comisiones/templates/comisions/crecimientoCDAT.html
@@ -1,8 +1,7 @@
 <div class="table">
     <h4>Crecimiento CDAT</h4>
     
-    <p>{{checkMeta.message}}</p>
-    <p>{{checkMeta.porcentaje}}</p>
+
     <table>
     <tr>
         <th>Codigo Interno</th>
@@ -27,19 +26,7 @@
     </table>
     <p>Tasa Promedio: {{checkMeta.tasaPromedio}}
     <p>Plazo Promedio: {{checkMeta.plazoPromedio}}
-    <p>Crecimiento: $ <span id="values">{{checkMeta.montoTotal}}</span>
-    <p>Valor total de Comision: $ <span id="values">{{checkMeta.comision}}</span>
+    <p>Crecimiento: $ <span id="values">{{checkMeta.montoTotal}}</span></p>
+    <p>Valor total de Comision: $ <span id="values">{{checkMeta.comision}}</span></p>
 
 </div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var montos = document.querySelectorAll('#values');
-        montos.forEach(function(monto) {
-            if (monto.textContent!== '') {
-                var num = parseFloat(monto.textContent.replace(/,/g, ''));
-                monto.textContent = num.toLocaleString();
-            }
-        });
-    });
-</script>
