--- a/tasas/templates/tasas/cdats.html
+++ b/tasas/templates/tasas/cdats.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block tasas %}
+    <h2>Tasas y comisiones de CDATs</h2>
     <table>
         <tr>
             <th>Cdats</th>
