--- a/tasas/templates/tasas/colocaciones.html
+++ b/tasas/templates/tasas/colocaciones.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block tasas %}
-
+    <h2>Tasas y comisiones de Colocaciones</h2>
     <table>
         <tr>
             <th>Colocaciones</th>
