--- a/tasas/templates/tasas/crecimientoCooviahorro.html
+++ b/tasas/templates/tasas/crecimientoCooviahorro.html
@@ -3,15 +3,15 @@
 {% load static %}
 
 {% block tasas %}
-    <h2>Tasas y comisiones de Crecimiento de Base Social</h2>
+    <h2>Tasas y comisiones de Crecimiento de Cooviahorro</h2>
     <table>
         <tr>
-            <th>Crecimiento</th>
-            <th>Valor</th>
+            <th>Descripcion</th>
+            <th>Valor Comision</th>
         </tr>
-        {% for crecimiento in crecimientoBase %}
+        {% for crecimiento in crecimientoCoovi %}
             <tr>
-                <th>{{crecimiento.porcentaje}}</th>
+                <th>{{crecimiento.description}}</th>
                 <th>{{crecimiento.value}}</th>
             </tr>
         {% endfor %}
@@ -22,4 +22,5 @@
         {{ form.as_p }}
         <button type="submit">Guardar</button>
     </form>
+
 {% endblock tasas %}
