--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -9,21 +9,21 @@
     <div class="tables">
         <h2>Comisiones {{asesor}}</h2>
     
-        {% comment %} {% include "comisions/afiliaciones.html" %} {% endcomment %}
+        {% include "comisions/afiliaciones.html" %}
         
-        {% comment %} {% include "comisions/colocaciones.html" %} {% endcomment %}
+        {% include "comisions/colocaciones.html" %}
         
-        {% comment %} {% include "comisions/cooviahorros.html" %} {% endcomment %}
+        {% include "comisions/cooviahorros.html" %}
         
-        {% comment %} {% include "comisions/cdats.html" %} {% endcomment %}
+        {% include "comisions/cdats.html" %}
 
-        {% comment %} {% include "comisions/ahorroVista.html" %} {% endcomment %}
+        {% include "comisions/ahorroVista.html" %}
           
         {% if checkMeta.director %}
             {% if checkMeta.state %}
                 <p>{{checkMeta.porcentaje}}</p>
                 <p>{{checkMeta.message}}</p>
-                {% comment %} {% include "comisions/crecimientoBase.html" %} {% endcomment %}
+                {% include "comisions/crecimientoBase.html" %}
                 {% if checkMeta.stateCdat %}
                     {% include "comisions/crecimientoCDAT.html" %}        
                 {% endif %}
