--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -9,15 +9,15 @@
     <div class="tables">
         <h2>Comisiones {{asesor}}</h2>
     
-        {% include "comisions/afiliaciones.html" %}
+        {% comment %} {% include "comisions/afiliaciones.html" %} {% endcomment %}
         
-        {% include "comisions/colocaciones.html" %}
+        {% comment %} {% include "comisions/colocaciones.html" %} {% endcomment %}
         
-        {% include "comisions/cooviahorros.html" %}
+        {% comment %} {% include "comisions/cdats.html" %} {% endcomment %}
         
-        {% include "comisions/cdats.html" %}
+        {% comment %} {% include "comisions/cooviahorros.html" %} {% endcomment %}
 
-        {% include "comisions/ahorroVista.html" %}
+        {% comment %} {% include "comisions/ahorroVista.html" %} {% endcomment %}
           
         {% if checkMeta.director %}
             {% if checkMeta.state %}
@@ -37,14 +37,3 @@
     </div>
 {% endblock %}
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var montos = document.querySelectorAll('#values');
-        montos.forEach(function(monto) {
-            if (monto.textContent!== '') {
-                var num = parseFloat(monto.textContent.replace(/,/g, ''));
-                monto.textContent = num.toLocaleString();
-            }
-        });
-    });
-</script>
