--- a/tasas/templates/control.html
+++ b/tasas/templates/control.html
@@ -16,6 +16,7 @@
         <li><a href="{% url "crecimientoBase" %}">Crecimiento Base Social</a></li>
         <li><a href="{% url "crecimientoCdat" %}">Crecimiento CDAT</a></li>
         <li><a href="{% url "crecimientoCooviahorro" %}">Crecimiento Cooviahorro</a></li>
+        <li><a href="{% url "crecimientoAhorro" %}">Crecimiento AhorroVista</a></li>
     </ul>
 
     {% block tasas %}
