--- a/tasas/templates/control.html
+++ b/tasas/templates/control.html
@@ -17,6 +17,7 @@
         <li><a href="{% url "crecimientoCdat" %}">Crecimiento CDAT</a></li>
         <li><a href="{% url "crecimientoCooviahorro" %}">Crecimiento Cooviahorro</a></li>
         <li><a href="{% url "crecimientoAhorro" %}">Crecimiento AhorroVista</a></li>
+        <li><a href="{% url "crecimientoCartera" %}">Crecimiento Cartera</a></li>
     </ul>
 
     {% block tasas %}
