Update crecimiento cartera, add html and controls

--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -29,6 +29,7 @@
                 {% endif %}
                 {% comment %} {% include "comisions/crecimientoCoovi.html" %} {% endcomment %}
                 {% comment %} {% include "comisions/crecimientoAhorro.html" %} {% endcomment %}
+                {% include "comisions/crecimientoCartera.html" %}
             {% else %}
                 <p>{{checkMeta.porcentaje}}</p>
                 <p>{{checkMeta.message}}</p>
