--- a/tasas/templates/tasas/afiliaciones/afiliaciones.html
+++ b/tasas/templates/tasas/afiliaciones/afiliaciones.html
@@ -3,30 +3,24 @@
 {% load static %}
 
 {% block tasas %}
-    <h2 class="title-table">Tasas y comisiones de Colocaciones</h2>
+    <h2 class="title-table">Tasas y comisiones Afiliaciones</h2>
     <table class="table-tasas">
         <tr>
-            <th>Colocaciones</th>
-            <th>Rol</th>
-            <th>Tasa desde</th>
-            <th>Tasa hasta</th>
-            <th>Valor Minimo</th>
-            <th>Valor Maximo</th>
-            <th>Monto</th>
+            <th>Afiliaciones</th>
+            <th>Desde</th>
+            <th>Hasta</th>
+            <th>Valor por afiliacion</th>
             <th></th>
             <th></th>
         </tr>
-        {% for colocacion in colocaciones %}
+        {% for afiliacion in afiliaciones %}
             <tr>
-                <td class="sep">{{colocacion.name}}</td>
-                <td class="sep">{{colocacion.rol}}</td>
-                <td class="sep">{{colocacion.tasa_min}}</td>
-                <td class="sep">{{colocacion.tasa_max}}</td>
-                <td class="sep">{{colocacion.value_min}}</td>
-                <td class="sep">{{colocacion.value_max}}</td>
-                <td class="sep">{{colocacion.value}}</td>
+                <td class="sep">{{afiliacion.name}}</td>
+                <td class="sep">{{afiliacion.since}}</td>
+                <td class="sep">{{afiliacion.until}}</td>
+                <td class="sep">{{afiliacion.value}}</td>
                 <td class="sep">
-                    <a class="" href="#">
+                    <a class="link1" href="{% url 'updateafiliacion' afiliacion.id %}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-edit">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
@@ -36,7 +30,7 @@
                     </a>
                 </td>
                 <td>
-                    <a class="" href="" onclick="return confirm('Esta seguro de eliminar este registro?')">
+                    <a class="link2" href="{% url 'deleteafiliacion' afiliacion.id %}" onclick="return confirm('Esta seguro de eliminar este registro?')">
                         <svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M4 7l16 0" /><path d="M10 11l0 6" />
@@ -49,27 +43,28 @@
     </table>
 
     <form method="post" class="form">
+        <h3>Nuevo registro de Comision en numero de Afiliaciones</h3>
         {% csrf_token %}
         <div class="content-form">
             {{ form.as_p }}
         </div>
         <button class="created" type="submit">
-            <div class="svg-wrapper-1">
-                <div class="svg-wrapper">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 24 24"
-                        width="30"
-                        height="30"
-                        class="icon"
-                    >
-                        <path
-                        d="M22,15.04C22,17.23 20.24,19 18.07,19H5.93C3.76,19 2,17.23 2,15.04C2,13.07 3.43,11.44 5.31,11.14C5.28,11 5.27,10.86 5.27,10.71C5.27,9.33 6.38,8.2 7.76,8.2C8.37,8.2 8.94,8.43 9.37,8.8C10.14,7.05 11.13,5.44 13.91,5.44C17.28,5.44 18.87,8.06 18.87,10.83C18.87,10.94 18.87,11.06 18.86,11.17C20.65,11.54 22,13.13 22,15.04Z"
-                        ></path>
-                    </svg>
+          <div class="svg-wrapper-1">
+            <div class="svg-wrapper">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="30"
+                    height="30"
+                    class="icon"
+                >
+                    <path
+                    d="M22,15.04C22,17.23 20.24,19 18.07,19H5.93C3.76,19 2,17.23 2,15.04C2,13.07 3.43,11.44 5.31,11.14C5.28,11 5.27,10.86 5.27,10.71C5.27,9.33 6.38,8.2 7.76,8.2C8.37,8.2 8.94,8.43 9.37,8.8C10.14,7.05 11.13,5.44 13.91,5.44C17.28,5.44 18.87,8.06 18.87,10.83C18.87,10.94 18.87,11.06 18.86,11.17C20.65,11.54 22,13.13 22,15.04Z"
+                    ></path>
+                </svg>
                 </div>
             </div>
             <span>Guardar</span>
         </button>
     </form>
-{% endblock tasas%}
+{% endblock tasas %}
